@@ -5,6 +5,7 @@ Change log for hexer, the multi-view binary editor
 	- provide a better vasprintf() simulation to fix a display bug
 	- use sigemptyset() instead of a direct assignment to sigset_t
 	  (reported by Daniel Schepler <dschepler@gmail.com>)
+	- remove some unused functions
 
 0.1.8	2014/09/11
 	- fix a crash when inserting or replacing a half-byte
